Beggining to incorporate temperature logging and developing data analysis features

--- a/Characterizing PointLock Algorithms.ipynb
+++ b/Characterizing PointLock Algorithms.ipynb
@@ -25,7 +25,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal.windows import boxcar\n",
-    "from Packages.UpdateManager import UpdateManager\n",
+    "#from Packages.UpdateManager import UpdateManager\n",
+    "from Packages.Analysis import DataAnalyzer as UpdateManager\n",
     "import copy\n",
     "import sys\n",
     "sys.path.append(r'/Users/glinn/Google Drive (anli2171@colorado.edu)/Dessau Lab/Code/Plotting_Tools/Plotting_Tools')\n",
@@ -108,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18a93ddc0>]"
+       "[<matplotlib.lines.Line2D at 0x188ff0d00>]"
       ]
      },
      "execution_count": 5,
@@ -213,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18b03b610>]"
+       "[<matplotlib.lines.Line2D at 0x1896add90>]"
       ]
      },
      "execution_count": 9,
@@ -271,7 +272,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calibration voltages shape (121,)\n",
       "0.07370739403269598 13.56715989112854\n"
      ]
     }
@@ -572,15 +572,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calibration voltages shape (121,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "manager_lock = UpdateManager()\n",
     "\n",
@@ -1056,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
