--- a/Analysis Notebooks/Characterizing PointLock Algorithms.ipynb
+++ b/Analysis Notebooks/Characterizing PointLock Algorithms.ipynb
@@ -18,24 +18,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/glinn/Google Drive (anli2171@colorado.edu)/Dessau Lab/Code/PointLock Software/LaserPointLock/Analysis Notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal.windows import boxcar\n",
     "#from Packages.UpdateManager import UpdateManager\n",
-    "from Packages.Analysis import DataAnalyzer as UpdateManager\n",
     "import copy\n",
     "import sys\n",
     "sys.path.append(r'/Users/glinn/Google Drive (anli2171@colorado.edu)/Dessau Lab/Code/Plotting_Tools/Plotting_Tools')\n",
-    "from Plotting_Tools import set_size"
+    "from Plotting_Tools import set_size\n",
+    "# sys.path.append(r'/Users/glinn/Google Drive (anli2171@colorado.edu)/Dessau Lab/Code/PointLock Software/LaserPointLock/packages/analysis_tools')\n",
+    "sys.path.append(r'/Users/glinn/Google Drive (anli2171@colorado.edu)/Dessau Lab/Code/PointLock Software/LaserPointLock')\n",
+    "# from analysis.py import DataAnalyzer as UpdateManager\n",
+    "import os\n",
+    "print(os.getcwd())\n",
+    "# from packages.analysis import DataAnalyzer\n",
+    "from packages.analysis_tools import DataAnalyzer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1686,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1686,7 +1700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
